fix(style): body background color defaulted to light on dark mode when scrolling fast

--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@ html, body {
 
 body {
   margin: 0;
-  background-color: var(--light1);
+  background-color: var(--background);
 }
